--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
                         <div class="logo_item text-center">
                            <a href="#">
-                              <img src="https://placehold.co/200x150" class="img-fluid rounded" alt="">
+                              <img src="img/Asset 1.png" class="img-fluid rounded" alt="">
                            </a>
                         </div>
                      </div>
