--- a/index.html
+++ b/index.html
@@ -88,28 +88,28 @@
                      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
                         <div class="logo_item text-center">
                            <a href="#">
-                              <img src="img/Asset 2.png" class="img-fluid rounded" alt="">
+                              <img src="../asset/img/Asset 2.png" class="img-fluid rounded" alt="">
                            </a>
                         </div>
                      </div>
                      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
                         <div class="logo_item text-center">
                            <a href="#">
-                              <img src="img/Asset 4.png" class="img-fluid rounded" alt="">
+                              <img src="../asset/img/Asset 4.png" class="img-fluid rounded" alt="">
                            </a>
                         </div>
                      </div>
                      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
                         <div class="logo_item text-center">
                            <a href="#">
-                              <img src="img/Asset 3.png" class="img-fluid rounded" alt="">
+                              <img src="../asset/img/Asset 3.png" class="img-fluid rounded" alt="">
                            </a>
                         </div>
                      </div>
                      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
                         <div class="logo_item text-center">
                            <a href="#">
-                              <img src="img/Asset 1.png" class="img-fluid rounded" alt="">
+                              <img src="../asset/img/Asset 1.png" class="img-fluid rounded" alt="">
                            </a>
                         </div>
                      </div>
