--- a/index.html
+++ b/index.html
@@ -88,28 +88,28 @@
                      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
                         <div class="logo_item text-center">
                            <a href="#">
-                              <img src="../asset/img/Asset 2.png" class="img-fluid rounded" alt="">
+                              <img src="asset/img/Asset 2.png" class="img-fluid rounded" alt="">
                            </a>
                         </div>
                      </div>
                      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
                         <div class="logo_item text-center">
                            <a href="#">
-                              <img src="../asset/img/Asset 4.png" class="img-fluid rounded" alt="">
+                              <img src="asset/img/Asset 4.png" class="img-fluid rounded" alt="">
                            </a>
                         </div>
                      </div>
                      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
                         <div class="logo_item text-center">
                            <a href="#">
-                              <img src="../asset/img/Asset 3.png" class="img-fluid rounded" alt="">
+                              <img src="asset/img/Asset 3.png" class="img-fluid rounded" alt="">
                            </a>
                         </div>
                      </div>
                      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
                         <div class="logo_item text-center">
                            <a href="#">
-                              <img src="../asset/img/Asset 1.png" class="img-fluid rounded" alt="">
+                              <img src="asset/img/Asset 1.png" class="img-fluid rounded" alt="">
                            </a>
                         </div>
                      </div>
@@ -239,7 +239,7 @@
                            <div class="row">
                               <div class="col-xl-4 col-lg-5 col-12">
                                  <div class="about_image text-end">
-                                    <img src="https://placehold.co/300x300" class="img-fluid rounded-2" alt="">
+                                    <img src="asset/img/Jesse-Williams.png" class="img-fluid rounded-2" alt="">
                                  </div>
                               </div>
                               <div class="col-xl-8 col-lg-7 col-12">
@@ -262,7 +262,7 @@
                               </div>
                               <div class="col-xl-4 col-lg-5 col-12">
                                  <div class="about_image">
-                                    <img src="https://placehold.co/300x300" class="img-fluid rounded-2" alt="">
+                                    <img src="asset/img/David-Stillman.png" class="img-fluid rounded-2" alt="">
                                  </div>
                               </div>
                            </div>
