--- a/index.html
+++ b/index.html
@@ -212,8 +212,10 @@
                      </div>
                      <div class="col-xl-5 col-lg-6 col-12">
                         <div class="right">
-                           <p>“The LMS space is incredibly crowded and competitive. We needed the ability to get our messaging built and in market as quickly as possible. The team at Stori helped us reposition, align internally, and create unique and crisp messaging in just over 30-days. ”</p>
-                           <h6>SKILLJAR LOGO</h6>
+                           <p>“Positioning and messaging is critical to aligning internal teams and to guiding product strategy. These types of projects have a tendency to drag on for far too long. Stori was able to guide our team to consensus and deliver a v1.0 in just over 30-days. We can now get this message into the market, where we can test, iterate, and optimize it.”
+
+</p>
+                           <h6>Sandi Lin–CEO, Skilljar</h6>
                         </div>
                      </div>
                   </div>
@@ -230,7 +232,7 @@
             <div class="col-12">
                <div class="top_info text-center">
                   <h4 class="section_heading">ABOUT US</h4>
-                  <h5>Anyone can put words into a doc, we help founders strategically align, communicate value, and focus attention.</h5>
+                  <h5>Anyone can put words into a doc, we help founders strategically align, communicate value, and focus their resources.</h5>
                </div>
                <div class="about_wrapper">
                   <div class="row">
@@ -246,7 +248,7 @@
                                  <div class="aboutInfo">
                                     <h3>Founder</h3>
                                     <p>Jesse Williams has over ten years of experience in product marketing and messaging. He has spent his career building high-functioning product marketing teams. Jesse’s work has been proven at venture-backed startups (4x exits) and Fortune-100 companies (AWS, Red Hat, IBM).</p>
-                                    <p>Before founding Stori, Jesse was the VP of Product Marketing for Docker and led product marketing at AWS where he helped reposition the messaging and positioning for DevOps, GitOps, Infrastructure-as-Code, and EventDriven Architectures. </p>
+                                    <p>Before founding Stori, Jesse was the VP of Product Marketing for Docker and led product marketing at AWS where he helped reposition the messaging and positioning for DevOps, GitOps, Infrastructure-as-Code (IAC), and Event Driven Architectures (EDA). </p>
                                  </div>
                               </div>
                            </div>
