--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                   <div class="row">
                      <div class="col-xl-4 col-lg-4 col-md-4 col-12">
                         <div class="content text-center">
-                           <h4>Fill your top <br> funnel</h4>
+                           <h4>Fill your top <br>of funnel</h4>
                            <h2>25<span>%</span></h2>
                         </div>
                      </div>
