--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                               <div class="wrapper">
                                  <h2>Differentiate from the competition <br> & communicate value, with <span>Stori.</span></h2>
                                  <div class="btn_box">
-                                    <button class="btn btn-dark rounded-pill">Lets talk</button>
-                                    <button class="btn btn-outline-dark rounded-pill">Our work</button>
+                                    <a href="#conatctUs"><button class="btn btn-dark rounded-pill">Lets talk</button></a>
+                                    <a href="#results"><button class="btn btn-outline-dark rounded-pill">Our work</button></a>
                                  </div>
                               </div>
                            </div>
@@ -77,11 +77,11 @@
             <div class="col-12">
                <div class="service_heading text-center">
                   <h4 class="section_heading">SERVICES</h4>
-                  <h3>We do one thing</h3>
+                  <h3>We do one thing,</h3>
                </div>
                <div class="service_details text-center">
                   <h4>and we do it better than anyone else.</h4>
-                  <p>Stori partners with leading venture capital firms to drive <br> outsized results for early to mid-stage portfolio companies.</p>
+                  <p style="font-weight: lighter;">Stori partners with leading venture capital firms to drive <br> outsized results for early to mid-stage portfolio companies.</p>
                </div>
                <div class="service_logo_area">
                   <div class="row">
@@ -132,7 +132,7 @@
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                            <div class="content">
                               <h3>Messaging & Positioning <br> Strategies</h3>
-                              <p>Balancing technical clarity with a unique tone of voice, while cutting through market noise is our superpower. We’ve developed a unique messaging architecture called STORI that’s been tested and proven at early stage startups and established hyperscalers.</p>
+                              <p style="font-weight: lighter;">Balancing technical clarity with a unique tone of voice, while cutting through market noise is our superpower. We’ve developed a unique messaging architecture called STORI that’s been tested and proven at early stage startups and established hyperscalers.</p>
                            </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12 text-end">
@@ -148,7 +148,7 @@
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                            <div class="content">
                               <h3>Fractional Product <br> Marketing</h3>
-                              <p>Finding excellent product marketing talent is an impossible challenge, and if you can it's not cheap. Stori clients have access to proven PMM talent, tested PMM templates, executive-level experience, and ICs that can deliver results fast (we're talking weeks, not months, not quarters.)</p>
+                              <p style="font-weight: lighter;">Finding excellent product marketing talent is an impossible challenge, and if you can it's not cheap. Stori clients have access to proven PMM talent, tested PMM templates, executive-level experience, and ICs that can deliver results fast (we're talking weeks, not months, not quarters.)</p>
                            </div>
                         </div>
                      </div>
@@ -158,7 +158,7 @@
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                            <div class="content">
                               <h3>GTM Audit and Evaluation</h3>
-                              <p>Product marketing impacts every area of a company. Teams shouldn't be scrambling to build GTM assets every time an opportunity is created. Equipping your portcos with best in class assets, vetted by industry experts with a Stori GTM audit and evaluation.</p>
+                              <p style="font-weight: lighter;">Product marketing impacts every area of a company. Teams shouldn't be scrambling to build GTM assets every time an opportunity is created. Equipping your portcos with best in class assets, vetted by industry experts with a Stori GTM audit and evaluation.</p>
                            </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12 text-end">
@@ -212,7 +212,7 @@
                      </div>
                      <div class="col-xl-5 col-lg-6 col-12">
                         <div class="right">
-                           <p>“Positioning and messaging is critical to aligning internal teams and to guiding product strategy. These types of projects have a tendency to drag on for far too long. Stori was able to guide our team to consensus and deliver a v1.0 in just over 30-days. We can now get this message into the market, where we can test, iterate, and optimize it.”
+                           <p style="font-weight: lighter;">“Positioning and messaging is critical to aligning internal teams and to guiding product strategy. These types of projects have a tendency to drag on for far too long. Stori was able to guide our team to consensus and deliver a v1.0 in just over 30-days. We can now get this message into the market, where we can test, iterate, and optimize it.”
 
 </p>
                            <h6>Sandi Lin–CEO, Skilljar</h6>
@@ -232,7 +232,7 @@
             <div class="col-12">
                <div class="top_info text-center">
                   <h4 class="section_heading">ABOUT US</h4>
-                  <h5>Anyone can put words into a doc, we help founders strategically align, communicate value, and focus their resources.</h5>
+                  <h5 style="font-weight: lighter;">Anyone can put words into a doc, we help founders strategically align, communicate value, and focus their resources.</h5>
                </div>
                <div class="about_wrapper">
                   <div class="row">
@@ -247,8 +247,8 @@
                               <div class="col-xl-8 col-lg-7 col-12">
                                  <div class="aboutInfo">
                                     <h3>Founder</h3>
-                                    <p>Jesse Williams has over ten years of experience in product marketing and messaging. He has spent his career building high-functioning product marketing teams. Jesse’s work has been proven at venture-backed startups (4x exits) and Fortune-100 companies (AWS, Red Hat, IBM).</p>
-                                    <p>Before founding Stori, Jesse was the VP of Product Marketing for Docker and led product marketing at AWS where he helped reposition the messaging and positioning for DevOps, GitOps, Infrastructure-as-Code (IAC), and Event Driven Architectures (EDA). </p>
+                                    <p style="font-weight: lighter;">Jesse Williams has over ten years of experience in product marketing and messaging. He has spent his career building high-functioning product marketing teams. Jesse’s work has been proven at venture-backed startups (4x exits) and Fortune-100 companies (AWS, Red Hat, IBM).</p>
+                                    <p style="font-weight: lighter;">Before founding Stori, Jesse was the VP of Product Marketing for Docker and led product marketing at AWS where he helped reposition the messaging and positioning for DevOps, GitOps, Infrastructure-as-Code (IAC), and Event Driven Architectures (EDA). </p>
                                  </div>
                               </div>
                            </div>
@@ -258,8 +258,8 @@
                               <div class="col-xl-8 col-lg-7 col-12">
                                  <div class="aboutInfo">
                                     <h3>Founder</h3>
-                                    <p>David Stillman is a tenured CEO of over ten years of experience leading successful Series A SaaS companies. David has a proven track record of developing and executing strategies for growth, driving revenue and customer acquisition, and building teams that excel.</p>
-                                    <p>Prior to founding Stori, David created the SaaS category, Conversation Intelligence, which contains companies valued at over $10B. David has founded and exited multiple companies, is a 3x Inc 5000 winner, and is a Top 40 under 40 CEO award winner.</p>
+                                    <p style="font-weight: lighter;">David Stillman is a tenured CEO of over ten years of experience leading successful Series A SaaS companies. David has a proven track record of developing and executing strategies for growth, driving revenue and customer acquisition, and building teams that excel.</p>
+                                    <p style="font-weight: lighter;">Prior to founding Stori, David created the SaaS category, Conversation Intelligence, which contains companies valued at over $10B. David has founded and exited multiple companies, is a 3x Inc 5000 winner, and is a Top 40 under 40 CEO award winner.</p>
                                  </div>
                               </div>
                               <div class="col-xl-4 col-lg-5 col-12">
