--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
    <meta charset="utf-8">
-   <title>STORI WEBSITE</title>
-   <meta name="description" content="">
+   <title>STORI MESSAGING & POSITIONING</title>
+   <meta name="description" content=" Stori is a product messaging and positioning consultancy that specializes in helping you cut through the noise, win more deals, and retain more customers.">
    <meta name="viewport" content="width=device-width, initial-scale=1">
+     <meta name="keywords" content="Product Messaging, Product Marketing, Messaging Strategy">
    <!-- Favicons -->
    <link rel="apple-touch-icon" href="asset/img/favicon.png" sizes="180x180">
    <link rel="icon" href="asset/img/favicon.png" sizes="32x32" type="image/png">
