--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                            <div class="content">
                               <h3>GTM Audit and Evaluation</h3>
-                              <p style="font-weight: lighter;">Product marketing impacts every area of a company. Teams shouldn't be scrambling to build GTM assets every time an opportunity is created. Equipping your portcos with best in class assets, vetted by industry experts with a Stori GTM audit and evaluation.</p>
+                              <p style="font-weight: lighter;">Product marketing impacts every area of a company. Teams shouldn't be scrambling to build GTM assets every time an opportunity is created. With Stori, you can equip your portcos with best in class assets, vetted by industry experts, or audit your existing assets and know exactly what needs improvement.</p>
                            </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12 text-end">
@@ -208,7 +208,7 @@
                   <div class="row align-items-center">
                      <div class="col-xl-7 col-lg-6 col-12">
                         <div class="left">
-                           <h4>See how Stori helped Insight Partner's portfolio company, Skilljar, differentiate their product in crowded space.</h4>
+                           <h4>See how Stori helped Insight Partner's portfolio company, Skilljar, differentiate their product in a crowded space.</h4>
                         </div>
                      </div>
                      <div class="col-xl-5 col-lg-6 col-12">
